@@ -108,14 +108,68 @@ class TestGemDependency < RubyGemTestCase
     pa0r = dep(/a/, '>= 0')
     pab0r = dep(/a|b/, '>= 0')
 
-    assert((a0    =~ a0), 'match self')
-    assert((pa0   =~ a0), 'match version exact')
-    assert((pa0   =~ a1), 'match version')
-    assert((pa0r  =~ a0), 'match regex simple')
-    assert((pab0r =~ a0), 'match regex complex')
+    assert_match a0, a0,    'match self'
+    assert_match a0, pa0,   'match version exact'
+    assert_match a1, pa0,   'match version'
+    assert_match a0, pa0r,  'match regex simple'
+    assert_match a0, pab0r, 'match regex complex'
 
-    assert(!(pa0r =~ b0),         'fail match regex')
-    assert(!(pa0r =~ Object.new), 'fail match Object')
+    refute_match b0,         pa0r, 'fail match regex'
+    refute_match Object.new, pa0r, 'fail match Object'
+  end
+
+  def test_equals_tilde_escape
+    a1 = Gem::Dependency.new 'a', '1'
+
+    pab1  = Gem::Dependency.new 'a|b', '>= 1'
+    pab1r = Gem::Dependency.new(/a|b/, '>= 1')
+
+    refute_match a1, pab1,  'escaped'
+    assert_match a1, pab1r, 'exact regexp'
+  end
+
+  def test_equals_tilde_object
+    a0 = Object.new
+
+    def a0.name() 'a' end
+    def a0.version() '0' end
+
+    pa0  = Gem::Dependency.new 'a', '>= 0'
+
+    assert_match a0, pa0, 'match version exact'
+  end
+
+  def test_equals_tilde_spec
+    def spec(name, version)
+      Gem::Specification.new do |spec|
+        spec.name = name
+        spec.version = version
+      end
+    end
+
+    def dep(name, version)
+      Gem::Dependency.new name, version
+    end
+
+    a0   = spec 'a', '0'
+    a1   = spec 'a', '1'
+    b0   = spec 'b', '0'
+
+    pa0  = dep 'a', '>= 0'
+    pa0r = dep(/a/, '>= 0')
+    pab0r = dep(/a|b/, '>= 0')
+
+    assert_match a0, pa0,   'match version exact'
+    assert_match a1, pa0,   'match version'
+                     
+    assert_match a0, pa0r,  'match regex simple'
+    assert_match a1, pa0r,  'match regex simple'
+                     
+    assert_match a0, pab0r, 'match regex complex'
+    assert_match b0, pab0r, 'match regex complex'
+
+    refute_match b0,         pa0r, 'fail match regex'
+    refute_match Object.new, pa0r, 'fail match Object'
   end
 
   def test_hash
